Настройка публикации в GitHub Pages

--- a/.github/workflows/githib-pages.yml
+++ b/.github/workflows/githib-pages.yml
@@ -21,7 +21,7 @@ jobs:
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: htdocs/
+          path: htdocs/html
 
   deploy:
     needs: build
